versioned_docs/version-0.27.0/how-to/client/connecting.mdx
---
sidebar_position: 3
description: Connect to a Fishjam room using a peer token and room URL obtained from your backend.
---

import TabItem from "@theme/TabItem";
import Tabs from "@theme/Tabs";

# Connecting

This article will guide you through the process of connecting to a Fishjam room.

## Getting URL and token

In order to connect, you need to obtain a **Peer Token** (the token that will authenticate the peer in
your Room).

<Tabs groupId="app-type">

  <TabItem value="sandbox" label="Sandbox API">

Once you create your account on [Fishjam](https://fishjam.io), you can [use the Sandbox API](../backend/sandbox-api-testing) to generate peer tokens for testing or development purposes without setting up your own backend.
This is basically a service that will create a Room, add your app as
the Room's Peer, and return the token required to use that Room. It is available to all accounts, including the free **Mini Jar** plan.
For React/React Native apps, copy both the Fishjam ID from the [Dashboard tab](https://fishjam.io/app) and Sandbox API URL from the [Sandbox tab](https://fishjam.io/app/sandbox): the Sandbox API URL is used to get peer tokens, while the Fishjam ID is passed to `FishjamProvider` for media server access.

<Tabs groupId="platform">
  <TabItem value="web" label="React (Web)">

```ts
import { useSandbox } from "@fishjam-cloud/react-client";
const SANDBOX_API_URL = "your-sandbox-api-url-here";
const roomName = "room";
const peerName = "user";
// ---cut---

const { getSandboxPeerToken } = useSandbox({ sandboxApiUrl: SANDBOX_API_URL });
const peerToken = await getSandboxPeerToken(roomName, peerName);
```

  </TabItem>
  <TabItem value="mobile" label="React Native (Mobile)">

```ts
import { useSandbox } from "@fishjam-cloud/react-native-client";
const SANDBOX_API_URL = "your-sandbox-api-url-here";
const roomName = "room";
const peerName = "user";
// ---cut---

const { getSandboxPeerToken } = useSandbox({ sandboxApiUrl: SANDBOX_API_URL });
const peerToken = await getSandboxPeerToken(roomName, peerName);
```

  </TabItem>
</Tabs>

  </TabItem>
  <TabItem value="production" label="Own Backend">

For production, you need to implement your own backend service that will provide the user with a **Peer Token**. To do that,
follow our [server setup instructions](../backend/server-setup). The **Standard Jar** plan is recommended for production deployments.

  </TabItem>
</Tabs>

## Connecting

Use the [`useConnection`](../../api/web/functions/useConnection) hook to get
the [`joinRoom`](../../api/web/functions/useConnection#joinroom) function.

<Tabs groupId="platform">
  <TabItem value="web" label="React (Web)">

```tsx
const SANDBOX_API_URL = "your-sandbox-api-url-here";
// ---cut-before---
import { useConnection, useSandbox } from "@fishjam-cloud/react-client";
import React, { useCallback } from "react";

export function JoinRoomButton() {
  const { joinRoom } = useConnection(); // [!code highlight]
  // get the peer token from sandbox or your backend
  const { getSandboxPeerToken } = useSandbox({
    sandboxApiUrl: SANDBOX_API_URL,
  });

  const onJoinRoomPress = useCallback(async () => {
    // [!code highlight:5]
    const peerToken = await getSandboxPeerToken("Room", "User");
    await joinRoom({ peerToken });
  }, [joinRoom, getSandboxPeerToken]);

  return <button onClick={onJoinRoomPress}>Join room</button>;
}
```

  </TabItem>
  <TabItem value="mobile" label="React Native (Mobile)">

```tsx
import React, { useCallback } from "react";
import { Button } from "react-native";
import { useConnection, useSandbox } from "@fishjam-cloud/react-native-client";

const SANDBOX_API_URL = "your-sandbox-api-url-here";

export function JoinRoomButton() {
  const { joinRoom } = useConnection(); // [!code highlight]
  // get the peer token from sandbox or your backend
  const { getSandboxPeerToken } = useSandbox({
    sandboxApiUrl: SANDBOX_API_URL,
  });

  const onPressJoin = useCallback(async () => {
    // in production apps, get the peerToken from your own backend instead
    const peerToken = await getSandboxPeerToken("Room", "User");

    await joinRoom({ peerToken }); // [!code highlight]
  }, [joinRoom, getSandboxPeerToken]);

  return <Button onPress={onPressJoin} title="Join Room" />;
}
```

  </TabItem>
</Tabs>

## Disconnecting

In order to close connection, use the [`leaveRoom`](../../api/web/functions/useConnection#leaveroom) method
from [`useConnection`](../../api/web/functions/useConnection) hook.

<Tabs groupId="platform">
  <TabItem value="web" label="React (Web)">

```tsx
import { useConnection } from "@fishjam-cloud/react-client";
import React, { useCallback } from "react";

export function LeaveRoomButton() {
  const { leaveRoom } = useConnection(); // [!code highlight]

  return <button onClick={leaveRoom}>Leave room</button>;
}
```

  </TabItem>
  <TabItem value="mobile" label="React Native (Mobile)">

```tsx
import React, { useCallback } from "react";
import { Button } from "react-native";
import { useConnection } from "@fishjam-cloud/react-native-client";

export function LeaveRoomButton() {
  const { leaveRoom } = useConnection(); // [!code highlight]

  const onPressLeave = useCallback(async () => {
    await leaveRoom(); // [!code highlight]
  }, [leaveRoom]);

  return <Button onPress={onPressLeave} title="Leave Room" />;
}
```

  </TabItem>
</Tabs>

## Next Steps

Now that you're connected to a room, you can explore additional features:

- [Start Streaming](./start-streaming) - Enable your camera and microphone
- [List Other Peers](./list-other-peers) - Display video from other participants
- [Data Channels](../../explanation/data-channels) - Send and receive arbitrary data between peers (e.g., text chat)
- [Picture in Picture](./picture-in-picture) - Allow users to watch video in a floating window (Mobile)
- [Background Calls](./background-streaming) - Keep calls active when the app is backgrounded (Mobile)
